k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sicose
  namespace: sicose-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: sicose.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sicose-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sicose-frontend
                port:
                  name: http
